MDEV-17042: prepared statement does not return error with SQL_MODE STRICT_TRANS_TABLES.

Use for parameters value conversion functions which issue warnings.